# individueel-project

./: .gitignore  .typedefs.swp  GPATH  GRTAGS  GSYMS  GTAGS  README.md  individueel-project.cabal  stack.yaml  test.dot  typedefs  voorbeelden.txt
doc/: .#verslag-graph-reduction.tex  .~lock.projectvoorstel.odt#  notas.txt  presentatie.nav  presentatie.out  presentatie.tex  presentatie.toc  presentatie.vrb  projectvoorstel.odt  verslag-1.tex  verslag-graph-reduction.tex  verslag-type-system.tex
doc/images/: square_graph.dot  square_graph_reduced.dot
reduction-engine/: reduction-engine.cabal
reduction-engine/.stack-work/install/x86_64-linux/lts-5.11/7.10.3/lib/x86_64-linux-ghc-7.10.3/reduction-engine-0.1.0.0-Bh5DVqNqBIh7vqI3a8LjbB/: ReductionEngine.dyn_hi
reduction-engine/.stack-work/install/x86_64-linux/lts-5.11/7.10.3/pkgdb/: package.cache  reduction-engine-0.1.0.0-9dd1da749a92a62ed231ac4437339c5e.conf
reduction-engine/csrc/: cell.c  print.c  reduce.c
reduction-engine/include/: cell.h  print.h  reduce.h
reduction-engine/src/: ReductionEngine  ReductionEngine.hi  ReductionEngine.hs
src/: Constant.hs  EnrichedLambda.hs  EnrichedLambda.hs.orig  EnrichedLambdaParse.hs  EnrichedLambdaShow.hs  EnrichedLambdaTest.hs  Fix.hs  HsReduce.hs  Impoverish.hs  Lambda.hs  LambdaParse.hs  LambdaShow.hs  LambdaTest.hs  LambdaViz.hs  Main.hs  ParseTest.hs  Pattern.hs  Reduce.hs  ResultType.hs  Symbol.hs  Test.hs  TypeChecker.hs  TypeDef.hs  TypedLambda.hs  TypedLambdaParse.hs  TypedProgram.hs  Wat.hs
src/Generic/: Glutton.hs  Varia.hs
src/reduction-engine/: main.c
