name:                individueel-project
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/individueel-project#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author Here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  reduction-engine/csrc/reduce.c
                     reduction-engine/include/reduce.h

library
  ghc-options:         -optc -Wall -O
  hs-source-dirs:      reduction-engine/src
  exposed-modules:     ReductionEngine
  c-sources:           reduction-engine/csrc/reduce.c
                       reduction-engine/csrc/cell.c
  include-dirs:        reduction-engine/include
  includes:            reduce.h,
                       cell.h
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable ip
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       Constant,
                       EnrichedLambda,
                       EnrichedLambdaParse,
                       Generic.Glutton,
                       Generic.Varia,
                       Impoverish,
                       Lambda,
                       LambdaShow,
                       LambdaViz,
                       Pattern,
                       Symbol,
                       TypeDef,
                       Reduce
                       

  build-depends:       QuickCheck,
                       base >= 4.7 && < 5,
                       containers >= 0.5.6.2,
                       parsec,
                       random,
                       bifunctors,
                       graphviz,
                       fgl,
                       text,
                       individueel-project
