name:                reduction-engine
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/reduction-engine#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10
extra-source-files:  csrc/reduce.c
                     include/reduce.h

library
  hs-source-dirs:      src
  exposed-modules:     ReductionEngine
  c-sources:           csrc/reduce.c
  include-dirs:        include
  includes:            reduce.h
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/reduction-engine
